# BaseElements-Plugin

./: .gitattributes  .gitignore  .gitmodules  BUILDING  BUILDING.iOS  BUILDING.linux  BUILDING.macOS  BUILDING.md  BUILDING.win64  BaseElements-Plugin-Libraries  CHANGE_LOG  CMakeLists.txt  CONTRIBUTING  Debugging.md  Documents  README  REQUIREMENTS  WorkInProgress.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.yml
.github/workflows/: main.yml
Building/: BUILDING  BUILDING.iOS  BUILDING.linux  BUILDING.macOS  BUILDING.win64
Building/Scripts/: README.md  build_fontconfig.sh  build_freetype.sh  build_jansson.sh  build_libcurl.sh  build_libiconv.sh  build_liboauth.sh  build_libpodofo.sh  build_libssh2.sh  build_libturbojpeg.sh  build_libxml2.sh  build_libxslt.sh  build_openssl.sh
Headers/: README  gcrypt.h  gpg-error.h  jansson.h  oauth.h
Headers/FMWrapper/: FMXBinaryData.h  FMXCalcEngine.h  FMXClient.h  FMXData.h  FMXDateTime.h  FMXExtern.h  FMXFixPt.h  FMXText.h  FMXTextStyle.h  FMXTypes.h
Headers/Poco/: Config.h
Headers/curl/: Makefile
Headers/iconv/: iconv.h
Headers/libde265/: de265-version.h
Headers/libexpat/: expat_config.h
Headers/libheif/: heif_version.h
Headers/libpng/: pnglibconf.h
Headers/libturbojpeg/: jconfig.h
Headers/libxml/: encoding.h  xmlversion.h
Headers/libxslt/: xsltconfig.h
Headers/mimetic/: utils.h
Headers/openssl/: configuration.h  opensslconf.h
Headers/podofo/: podofo-base.h
Headers/turbojpeg/: jconfig.h
Headers/zlib/: zconf.h
Libraries/: README
Libraries/iOS/: README
Libraries/macOS/: README
Libraries/win32/: README
Libraries/win64/: CORE_DB_Magick++_.lib  CORE_DB_aom_.lib  CORE_DB_brotli_.lib  CORE_DB_bzlib_.lib  CORE_DB_cairo_.lib  CORE_DB_croco_.lib  CORE_DB_filters_.lib  CORE_DB_glib_.lib  CORE_DB_jp2_.lib  CORE_DB_lcms_.lib  CORE_DB_libheif_.lib  CORE_DB_librsvg_.lib  CORE_DB_libxml_.lib  CORE_DB_libzip_.lib  CORE_DB_pango_.lib  CORE_DB_webp_.lib  CORE_RL_Magick++_.lib  CORE_RL_MagickCore_.lib  CORE_RL_aom_.lib  CORE_RL_brotli_.lib  CORE_RL_cairo_.lib  CORE_RL_croco_.lib  CORE_RL_ffi_.lib  CORE_RL_jpeg-turbo_.lib  CORE_RL_lcms_.lib  CORE_RL_libheif_.lib  CORE_RL_libraw_.lib  CORE_RL_lqr_.lib  CORE_RL_openjpeg_.lib  CORE_RL_pango_.lib  CORE_RL_webp_.lib  FMWrapper.lib  PocoCryptomt.lib  PocoCryptomtd.lib  PocoFoundationmt.lib  PocoFoundationmtd.lib  PocoJSONmt.lib  PocoJSONmtd.lib  PocoNetmt.lib  PocoNetmtd.lib  (+53 more)
PlugInSDK/: README
Project/: BaseElements.cbp  BaseElements.sln  BaseElements.vcxproj  BaseElements.vcxproj.filters  Goya.vcxproj  MAKEFILE  MAKEFILE.win  Makefile  Makefile.macos  resource.h
Project/BE_Plugin_Tests/: BE_Plugin_Tests.mm  Test_BEMailRecipient.mm  Test_BESMTPEmailMessage.mm  Test_BETime.mm  Test_JSON_jq.mm
Project/BaseElements.xcodeproj/: mark.mode1v3  mark.pbxuser  project.pbxproj
Project/BaseElementsIOS/: BaseElementsIOS.h
Project/Extras/: BaseElements Plugin Tests.fmp12  BaseElements Plugin Tests.fp7  GenerateStringsFiles.rb  SetVersionNumber.rb  post.php  test.php
Resources/: BEPluginExample.rc  BEPluginVersion.rc  BEPluginVersion.strings  BaseElements.rc  BaseElements.strings  BaseElementsFunctionDescription.strings  BaseElements_de.rc  BaseElements_en.rc  Info.plist  ProgressDialog.xib  Resource.h  resource.h  resource_version.h
Resources/Base.lproj/: BEProgressDialog.xib  Info.plist  Localizable.strings
Resources/de.lproj/: BEPluginVersion.strings  BaseElements.strings  Localizable.strings
Resources/en.lproj/: BEPluginVersion.strings  BaseElements.strings  Info.plist  Localizable.strings
Resources/ja.lproj/: BaseElements.strings
Resources/zh-Hans.lproj/: BEPluginVersion.strings
Resources/zh-Hant.lproj/: BEPluginVersion.strings  BaseElements.strings
Source/: BEAppleFunctionsCommon.h  BEAppleFunctionsCommon.mm  BEBase64.cpp  BEBase64.h  BECppUtilities.cpp  BECppUtilities.h  BECurl.cpp  BECurl.h  BECurlOption.cpp  BECurlOption.h  BEDebugInformation.cpp  BEFMS.cpp  BEFMS.h  BEFileMakerPlugin.cpp  BEFileMakerPlugin.h  BEFileSystem.cpp  BEFileSystem.h  BEFileTextReader.cpp  BEFileTextReader.h  BEIOSFunctions.h  BEIOSFunctions.mm  BEJSON.cpp  BEJSON.h  BEJavaScript.cpp  BEJavaScript.h  BELinuxFunctions.cpp  BEMacFunctions.h  BEMacFunctions.mm  BEMessageDigest.cpp  BEMessageDigest.h  BENSString.h  BENSString.mm  BEOAuth.cpp  BEOAuth.h  BEOpenSSLAES.cpp  BEOpenSSLAES.h  BEPDF.cpp  BEPDF.h  BEPlugin.cpp  BEPluginException.h  (+55 more)
Source/Crypto/: BEBase64.cpp  BEBase64.h  BEBio.cpp  BEBio.h  BEMessageDigest.cpp  BEMessageDigest.h  BEOpenSSLAES.cpp  BEOpenSSLAES.h  BEOpenSSLCipher.cpp  BEOpenSSLCipher.h  BEOpenSSLRSA.cpp  BEX509.cpp  BEX509.h
Source/Images/: BEImage.cpp  BEImage.h  BEJPEG.cpp  BEJPEG.h
Source/Net/: BECurl.cpp  BECurl.h  BECurlOption.cpp  BEMimeticMIMEEntity.cpp  BEMimeticMIMEEntity.h  BESMTPContainerAttachments.cpp  BESMTPContainerAttachments.h
Source/apple/: BEAppleFunctionsCommon.h  BEAppleFunctionsCommon.mm  BEIOSFunctions.h  BEIOSFunctions.mm  BEMacFunctions.h  BEMacFunctions.mm  BEMacNotificationResponse.h  ProgressDialogWindowController.m
Source/linux/: BELinuxFunctionStrings.h  BELinuxFunctions.cpp  BELinuxFunctions.h
Source/win/: BEWinFunctions.cpp  BEWinFunctions.h  BEWinIFileDialog.cpp
docs/: About.md  Compatiblity.md  Downloads.md  FAQ.md  Functions.md  Ideas.md  Installation.md  ProVersion.md  README.md  Sponsor.md  Translations.md
docs/Examples/: Dropbox.fmp12  Mailchimp.fmp12  Nextcloud.fmp12
docs/Functions/: BE_ArrayChangeValue.md  BE_ArrayDelete.md  BE_ArrayFind.md  BE_ArrayGetSize.md  BE_ArrayGetValue.md  BE_ArraySetFromValueList.md  (+125 more)
internal/: README.md
tests/: BE_Array.yml  BE_Button.yml  BE_ButtonAlternate.yml  BE_ButtonCancel.yml  BE_ButtonOK.yml  BE_Cipher.yml  BE_Clipboard.yml  BE_Dialog.yml  BE_Execute.yml  BE_File.yml  BE_HTTP.yml  BE_JSON.yml  BE_Message.yml  BE_OpenURL.yml  BE_Preferences.yml  BE_SQL.yml  BE_Script.yml  BE_TextExtractWords.yml  BE_Time.yml  BE_Values.yml  BE_Version.yml  BE_VersionAutoUpdate.yml  BE_XML.yml  BE_Zip.yml  README.md  Template.yml
(+740 files in other folders)
